--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <script>
     function yesClicked() {
         // SEND EMAIL TO YOU 💌
-        fetch("https://formspree.io/f/xkovnlry", {
+        fetch("https://formspree.io/f/abcdwxyz", {
             method: "POST",
             headers: {
                 "Content-Type": "application/json"
@@ -171,4 +171,5 @@
 </script>
 
 </body>
+
 </html>
