--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <script>
     function yesClicked() {
         // SEND EMAIL TO YOU 💌
-        fetch("https://formspree.io/f/abcdwxyz", {
+        fetch("https://formspree.io/f/xkovnlry", {
             method: "POST",
             headers: {
                 "Content-Type": "application/json"
@@ -173,3 +173,4 @@
 </body>
 
 </html>
+
